variable css update

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,3 +12,8 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $indicatorContent-horizontalRule-color: transparent;
+$status-color-complete: black !default;
+$status-color-notapplicable: black !default;
+$status-backgroundColor-complete: #5CB85C !default;
+$status-backgroundColor-notapplicable: #B7B7B7 !default;
+
