--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -11,6 +11,8 @@
 //$backgroundColor: white;
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
+$vanilla: #fff;
+
 $color-dark: #0b0c0c !default;
 $color-light: white !default;
 
