--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,6 +12,7 @@
 //$link-color: #337ab7;
 //$footer-text-color: #000000;
 $vanilla: #fff;
+$main-background-color: #eaeaea;
 
 $color-dark: #0b0c0c !default;
 $color-light: white !default;
