--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -51,9 +51,9 @@ header {
 	}
 }
 
-body {
-	  background: $vanilla;
-	    margin: 0 0 0 0;
+body{
+	  background: white;
+	    padding-top: 15px;
     }
 
 .heading {
