--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -28,9 +28,9 @@ $indicatorContent-horizontalRule-color: transparent;
 $status-color-complete: black !default;
 $status-color-notapplicable: black !default;
 $status-backgroundColor-complete: #5CB85C !default;
-$status-backgroundColor-notapplicable: #FFFAFA !default;
+$status-backgroundColor-notapplicable: #D9D9D9 !default;
 
-$status-backgroundColor-inner-notapplicable: #FFFAFA !default;
+$status-backgroundColor-inner-notapplicable: #D9D9D9 !default;
 
 $footer-text-color: $color-light !default;
 $footer-text-color-highContrast: $color-light-highContrast !default;
