--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -59,3 +59,8 @@ body.contrast-high {
 		}
 	}
 }
+
+#main-content #selectionChartFooter {
+  font-size: 14px;
+  line-height: 1.2;
+  padding-left: 20px; }
