--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -81,12 +81,12 @@ body.contrast-high {
   .shareBtn {
 	  margin: 1px 0;
   }
-  #shareFB { background: url("./images/bssowSpriteMin.png") calc(-36px * 6) -36px;}
-  #shareTWT { background: url("./images/bssowSpriteMin.png") calc(-36px * 7) -36px;}
-  #shareNaver { background: url("./images/bssowSpriteMin.png") calc(-36px * 4) -36px;}
-  #shareBand { background: url("./images/bssowSpriteMin.png") calc(-36px * 5) -36px;}
-  #sharePin { background: url("./images/bssowSpriteMin.png") calc(-36px * 8) -36px;}
-  #shareKS { background: url("./images/bssowSpriteMin.png") calc(-36px * 3) -36px;}
-  #shareKT { background: url("./images/bssowSpriteMin.png") calc(-36px * 2) -36px;}
-  #shareAddrCopy { background: url("./images/bssowSpriteMin.png") -36px -36px;}
+  #shareFB { background: url("../public/share_icon.png") calc(-36px * 6) -36px;}
+  #shareTWT { background: url("../public/share_icon.png") calc(-36px * 7) -36px;}
+  #shareNaver { background: url("../public/share_icon.png") calc(-36px * 4) -36px;}
+  #shareBand { background: url("../public/share_icon.png") calc(-36px * 5) -36px;}
+  #sharePin { background: url("../public/share_icon.png") calc(-36px * 8) -36px;}
+  #shareKS { background: url("../public/share_icon.png") calc(-36px * 3) -36px;}
+  #shareKT { background: url("../public/share_icon.png") calc(-36px * 2) -36px;}
+  #shareAddrCopy { background: url("../public/share_icon.png") -36px -36px;}
   /* SNS 공유버튼 아이콘 종료 */
