--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -65,22 +65,25 @@ body.contrast-high {
   line-height: 1.2;
   padding-left: 20px; }
 
-/* SNS 공유버튼 아이콘 */
-  #shareBtnContainer {
-	  width: 36px;
-	  margin: 0;
-	  position: fixed;
-	  bottom: 240px;
-	  right: calc(50% - 430px - 38px - 100px + 2px);
-	  opacity: 1;
-  }
-
-  @media screen and (max-width: 376px) {
-	  #shareBtnContainer { width: 200px; }
-  }
-  .shareBtn {
-	  margin: 1px 0;
-  }
+#shareBtnContainer { width: 100%; text-align: center; margin: 0 auto 64px auto; z-index: 1; }
+.shareBtn {
+	cursor: pointer;
+	display: inline-block; clear: none; text-align: center;
+	width:36px; height:36px; margin: 4px 4px;
+	background-repeat:no-repeat; background-size: 576px 576px !important;
+}
+@media screen and (max-width: 498px) {
+	#shareBtnContainer { width: 200px; }
+}
+@media screen and (min-width: 1280px) {
+	#shareBtnContainer {
+		width: 36px; margin: 0;
+		position: fixed;
+		bottom: 240px; right: calc(50% - 430px - 38px - 100px + 2px);
+		opacity: 1;
+	}
+	.shareBtn { margin: 1px 0; }
+}
   #shareFB { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 6) -36px;}
   #shareTWT { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 7) -36px;}
   #shareNaver { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 4) -36px;}
@@ -89,4 +92,4 @@ body.contrast-high {
   #shareKS { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 3) -36px;}
   #shareKT { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 2) -36px;}
   #shareAddrCopy { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") -36px -36px;}
-  /* SNS 공유버튼 아이콘 종료 */
+
