--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -93,3 +93,10 @@ body.contrast-high {
   #shareKT { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") calc(-36px * 2) -36px;}
   #shareAddrCopy { background: url("https://kostat-sdg-kor.github.io/sdg-indicators/public/share_icon.png") -36px -36px;}
 
+
+@media print {
+    a:after {
+        content: "" !important;
+    }
+}
+
