--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,7 +7,14 @@
 
   gtag('config', 'UA-206682582-1');
 </script>
-
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "13123bb5d9c59a";
+if(window.wcs) {
+  wcs_do();
+}
+</script>
 {% comment %}
 This space intended for custom third-party javascript.
 {% endcomment %}
