--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -68,7 +68,7 @@ function copyUrl(){
 			          templateArgs: {
 					            title: title_this_page,
 					            description: title_this_page,
-					            url : url_this_page
+					            url : window.location.pathname
 					          }
 			        });
 	        }
