--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -82,7 +82,13 @@ function copyUrl(){
 {% include components/indicator/header.html %}
 <div id="main-content" class="container goal-{{ page.goal.number }}" role="main">
 	{% include components/indicator/breadcrumbs.html %}
-	<img style="float:right;width:36px;cursor:pointer;" src="https://kostat-sdg-kor.github.io/sdg-indicators/public/sharebutton/print.png" title="인쇄" onclick="window.print()">
+	<div class="text-right"> 
+<div class="btn-group" role="group">
+<button class="btn btn-default" onclick="window.print();"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+<button class="btn btn-default"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+<button class="btn btn-default"><span class="glyphicon glyphicon-print" aria-hidden="true"></span></button>
+		</div>
+	</div>
   {% include components/indicator/data-notice.html %}
   {% include components/indicator/indicator-available.html %}
   {% include components/indicator/indicator-content.html %}
