--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div id="footerLinks">
-		{{ page.t.general.footer }}
+		{{ page.t.general.footer_notice }}
           <ul>
 		  <!--            <li><a href="https://open-sdg.org">{{ page.t.general.built_using_open_sdg }}</a></li>-->
             {% if site.footer_menu %}
