--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -96,4 +96,11 @@ body.contrast-high {
         content: "" !important;
     }
 }
-
+footer {
+  clear: left;
+  color: white;
+  background-color: #414042;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */ }
