--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -97,10 +97,5 @@ body.contrast-high {
     }
 }
 footer {
-  clear: left;
-  color: white;
-  background-color: #414042;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */ }
+  height: auto;
+}
