--- a/_layouts/indicator.html
+++ b/_layouts/indicator.html
@@ -84,8 +84,8 @@ function copyUrl(){
 	{% include components/indicator/breadcrumbs.html %}
 	<div class="text-right"> 
 <div class="btn-group" role="group">
-<button class="btn btn-default"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-<button class="btn btn-default"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+<button class="btn btn-default" onclick="zoomIn();"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+<button class="btn btn-default" onclick="zoomOut();"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
 <button class="btn btn-default" onclick="window.print();"><span class="glyphicon glyphicon-print" aria-hidden="true"></span></button>
 		</div>
 	</div>
