--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -64,7 +64,9 @@ body.contrast-high {
   font-size: 14px;
   line-height: 1.2;
   padding-left: 20px; }
-
+#main-content {
+	padding-bottom: 120px;
+}
 #shareBtnContainer { width: 100%; text-align: center; margin: 0 auto 64px auto; z-index: 1; }
 .shareBtn {
 	cursor: pointer;
