--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,6 @@
+<!-- XEIcon tag (http://xpressengine.github.io/XEIcon) -->
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-206682582-1"></script>
 <script>
