--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -76,15 +76,21 @@ body.contrast-high {
 }
 
 
-.shareBtnContainer .fb { background-color: #486aa1; color: #fff; }
-.shareBtnContainer .tw { background-color: #3eabea; color: #fff; }
-.shareBtnContainer .kt { background-color: #ffe23a; color: #3d1e1e; }
-.shareBtnContainer .ks { background-color: #ffe23a; color: #fff; }
-.shareBtnContainer .bd { background: #33aa47 url("https://kostat-sdg-kor.github.io/sdg-indicators/public/sharebutton/share_bd.png") 50% 50% no-repeat; color: #fff; }
-.shareBtnContainer .bm { background-color: #286dc0; color: #fff; }
-.shareBtnContainer .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
-.shareBtnContainer button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px; }
-button { font-family: inherit; font-size: inherit; font-weight:inherit; margin: 0;  border: 0; padding: 0; background: none; cursor: pointer; }
+.article-share {  width: 100%; text-align: center; margin: 0 auto 64px auto; z-index: 1;  }
+.article-share ul li ~ li { margin-top: 5px; }
+.article-share button { display: block; width: 40px; height: 40px; border-radius: 5px; font-size: 18px; }
+.article-share .like { border: 1px solid #ced4da; }
+.article-share .like .title { display: block; height: 16px; font-size: 14px; text-align: center; color: #f85265; }
+.article-share .like .count { font-size: 14px; line-height: 14px; color: #495057; display: block; }
+.article-share .fb { background-color: #486aa1; color: #fff; }
+.article-share .tw { background-color: #3eabea; color: #fff; }
+.article-share .kt { background-color: #ffe23a; color: #3d1e1e; }
+.article-share .ks { background-color: #ffe23a; color: #fff; }
+.article-share .bd { background: #33aa47 url("../images/v3/sub/share_bd.png") 50% 50% no-repeat; color: #fff; }
+.article-share .bm { background-color: #286dc0; color: #fff; }
+.article-share .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
+button,input,optgroup,select,textarea { font-family: inherit; font-size: inherit; font-weight:inherit; margin: 0;}
+button { border: 0; padding: 0; background: none; cursor: pointer }
 
 @media screen and (max-width: 498px) {
 	#shareBtnContainer { width: 200px; }
