--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -86,7 +86,7 @@ body.contrast-high {
 .article-share .tw { background-color: #3eabea; color: #fff; }
 .article-share .kt { background-color: #ffe23a; color: #3d1e1e; }
 .article-share .ks { background-color: #ffe23a; color: #fff; }
-.article-share .bd { background: #33aa47 url("../images/v3/sub/share_bd.png") 50% 50% no-repeat; color: #fff; }
+.article-share .bd { background: #33aa47 url("https://kostat-sdg-kor.github.io/sdg-indicators/public/sharebutton/share_bd.png") 50% 50% no-repeat; color: #fff; }
 .article-share .bm { background-color: #286dc0; color: #fff; }
 .article-share .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
 button,input,optgroup,select,textarea { font-family: inherit; font-size: inherit; font-weight:inherit; margin: 0;}
