--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -18,6 +18,13 @@ if(window.wcs) {
   wcs_do();
 }
 </script>
+<style>
+  @import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+.nanumgothic * {
+ font-family: 'Nanum Gothic', sans-serif;
+}
+</style>
 {% comment %}
 This space intended for custom third-party javascript.
 {% endcomment %}
