--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <div id="footerLinks">
+        <div id="footerLinks" style="font-size: large;">
 		{{ page.t.general.footer_notice }}
           <ul>
 		  <!--            <li><a href="https://open-sdg.org">{{ page.t.general.built_using_open_sdg }}</a></li>-->
