--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,9 @@
 body{
 	background: white;
 }
+td{
+	word-break: break-all;
+}
 header {
 	background: #fff url(../img/sdgbg.png) bottom left repeat-x;
 	.container {
