--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -92,6 +92,7 @@ body.contrast-high {
 .article-share .bd { background: #33aa47 url("https://kostat-sdg-kor.github.io/sdg-indicators/public/sharebutton/share_bd.png") 50% 50% no-repeat; color: #fff; }
 .article-share .bm { background-color: #286dc0; color: #fff; }
 .article-share .uc { background-color: #6c757e; color: #fff; font-size: 12px; }
+.article-share .qr { background-color: #000000; color: #ffffff; font-size: 24px; }
 button,input,optgroup,select,textarea { font-family: inherit; font-size: inherit; font-weight:inherit; margin: 0;}
 button { border: 0; padding: 0; background: none; cursor: pointer; margin: 3px 0px;}
 
