--- a/_includes/components/goals-introduction.html
+++ b/_includes/components/goals-introduction.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center">
+<br><h1 style="text-align: center;font-family: 'Nanum Gothic';font-size:50px;font-weight:bolder;">
 <!--  {% if site.goals_page.title %}
     {{ site.goals_page.title | t }}
   {% else %}
@@ -6,7 +6,7 @@
   {% endif %}
 -->
 {{ page.t.general.goals_title }}
-</h1>
+</h1><br><br>
 
 {% if site.goals_page.description %}
 <div class="goals-page-description">
